<resources>
    <string name="app_name">Bechele</string>
    <string name="start_quitz">Inizia il quitz!</string>
    <string name="bookmark">Domande salvate</string>
    <string name="title">Title</string>
    <string name="sets">Livelli di difficoltà</string>
    <string name="question">Domande</string>
    <string name="_5_10">5/10</string>
    <string name="_1">1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_question">Inserisci la domanda</string>
    <string name="rec">registrazioni</string>

    <string-array name="category">
        <item>Infanzia</item>
        <item>Orientamento Sessuale</item>
        <item>Hobbies e Pazzie</item>
    </string-array>

    <string-array name="difficultyLevel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>