<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button_startQuitz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotationX="2"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="42sp"
            android:layout_gravity="center"
            />

    </FrameLayout>

    <Button
        android:id="@+id/button_startQuitz"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/start_quitz"
        app:layout_constraintBottom_toTopOf="@+id/button_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_bookmark"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_rounded"
        android:text="@string/bookmark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/colorSecondary"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>